--- a/MovieCVApp/MovieCVApp/Base.lproj/Main.storyboard
+++ b/MovieCVApp/MovieCVApp/Base.lproj/Main.storyboard
@@ -20,26 +20,29 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="FEL-Zr-spF">
                                 <rect key="frame" x="0.0" y="76" width="414" height="300"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ozh-qi-UZt">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Ozh-qi-UZt">
                                     <size key="itemSize" width="200" height="300"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieCell" id="4jt-Gc-2rM">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="movieCell" id="4jt-Gc-2rM" customClass="MovieCollectionViewCell" customModule="MovieCVApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="ve9-EQ-E4T">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EaD-wa-Bgh">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="boyhood" translatesAutoresizingMaskIntoConstraints="NO" id="EaD-wa-Bgh">
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="300"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 </imageView>
                                             </subviews>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="imageViewOutlet" destination="EaD-wa-Bgh" id="YGY-lB-Hcx"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -84,6 +87,13 @@
                             <constraint firstItem="FEL-Zr-spF" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="m0l-u4-FGz"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionViewOutlet" destination="FEL-Zr-spF" id="4uq-qF-GeB"/>
+                        <outlet property="ratingOutlet" destination="LdS-mH-JCw" id="S2E-8q-erZ"/>
+                        <outlet property="revenueOutlet" destination="5pl-iK-3Iq" id="O8o-FO-VdE"/>
+                        <outlet property="titleOutlet" destination="N4M-t8-PGc" id="4oO-YZ-DdI"/>
+                        <outlet property="yearReleasedOutlet" destination="1Oo-46-i8m" id="bpw-N6-svr"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -91,6 +101,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="boyhood" width="200" height="300"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
